--- a/lang/pl.json
+++ b/lang/pl.json
@@ -21,7 +21,7 @@
   "cant_display_hourly_forecast": "Nie udało się wyświetlić prognozy godzinowej",
   "cant_display_your_location_weather": "Nie udało się wyświetlić pogody dla Twojej lokalizacji",
   "location_services_disabled": "Usługi lokalizacyjne są wyłaczone.",
-  "location_permissions_permanently_denied": "Trwały brak pozwolenia na dostep do lokalizacji, nie możemy prosić o uprawnienia.",
+  "location_permissions_permanently_denied": "Trwały brak pozwolenia na dostep do lokalizacji.\nMożesz to zmienić w Uprawnieniach Aplikacji w Ustawieniach.",
   "location_permissions_are_denied": "Odmowa dostępu do lokalizacji. Obecnie:",
   "getting_your_localization_weather": "Trwa pobieranie pogody dla Twojej lokalizacji..."
 }
